# notation

./: .gitignore  Cargo.toml  NOTES.md  Notation.toml  README.md  install.sh
.github/workflows/: build.yaml  build_mac.yaml  build_x86.yaml  release.yaml  release_mac.yaml  release_x86.yaml
docs/: intro.md
samples_md/: basic.md
samples_md/sub_dir/: another.md
src/: lib.rs
src/markdown/: mod.rs  parse.rs  util.rs
src/notion/: block.rs  client.rs  language.rs  mod.rs  page.rs  search.rs
src/settings/: mod.rs  notation.rs
tests/: basic_notion_test.rs
