[package]
name = "notation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.fast_local]
inherits = "release"
incremental = true
codegen-units = 16
strip = "none"
opt-level = 0
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
rpath = false

[dependencies]
anyhow = "1.0.86"
config = "0.14.0"
markdown = "=1.0.0-alpha.17"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
glob = "0.3.1"
clap = { version = "4.5.9", features = ["derive"] }
async-recursion = "1.1.1"
rand = "0.9.0-alpha.1"
percent-encoding = "2.3.1"
openssl = {version =  "0.10.66", features = ["vendored"] }
